# pmrmodel

./: .env  Cargo.toml  README.md  sqlx-data.json
migrations/: 20200121_demo.sql  20210311_model.sql
src/: lib.rs  main.rs  utils.rs
src/model/: workspace.rs  workspace_sync.rs  workspace_tag.rs
src/repo/: git.rs
