[package]
name = "pmrmodel"
version = "0.1.0"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
futures = "0.3"
paw = "1.0"
sqlx = { version = "0.4.2", features = [ "runtime-async-std-native-tls", "sqlite" ] }
structopt = { version = "0.3", features = ["paw"] }
