[package]
name = "pmrmodel"
version = "0.1.0"
authors = ["Tommy Yu <tommy.yu@auckland.ac.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
async-std = { version = "1.5.0", features = [ "attributes" ] }
chrono = "0.4"
enum_primitive = "*"
futures = "0.3"
git2 = "0.13"
log = { version = "0.4", features = ["std", "serde"] }
paw = "1.0"
sqlx = { version = "0.5.5", features = [ "runtime-async-std-native-tls", "sqlite", "offline" ] }
stderrlog = "0.5.1"
structopt = { version = "0.3", features = ["paw"] }
